--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-aiostem (0.1.2) unstable; urgency=low
+
+  * Update the build system and add compatibility with Python 3.9.
+
+ -- Romain Bezut <morian@xdec.net>  Sun, 19 Sep 2021 13:37:00 +0000
+
 python3-aiostem (0.1.1) unstable; urgency=low
 
   * Add an internal 'DISCONNECT' event handler and notifier (EOF on socket)
