--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+python3-aiostem (0.2.0) unstable; urgency=low
+
+  * General code quality improved thanks to multiple linters
+  * Added some automated tests and coverage (also fixes a few bugs)
+  * Added support for GETINFO commands (rewrote the message parser)
+
+ -- Romain Bezut <morian@xdec.net>  Fri, 21 Jan 2022 17:22:00 +0000
+
 python3-aiostem (0.1.2) unstable; urgency=low
 
   * Update the build system and add compatibility with Python 3.9.
