--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-aiostem (0.2.1) unstable; urgency=low
+
+  * Fix packaging excluding the whole library.
+
+ -- Romain Bezut <morian@xdec.net>  Fri, 21 Jan 2022 17:55:00 +0000
+
 python3-aiostem (0.2.0) unstable; urgency=low
 
   * General code quality improved thanks to multiple linters
