--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,25 @@
+python3-aiostem (0.2.4) unstable; urgency=low
+
+  * Add a way to parse keyword arguments with a whole line in messages
+
+ -- Romain Bezut <morian@xdec.net>  Sun,  6 Mar 2022 16:38:00 +0000
+
+python3-aiostem (0.2.3) unstable; urgency=low
+
+  * Add controller support for 'GETCONF' commands
+  * Rename question to query and response to reply in the API
+
+ -- Romain Bezut <morian@xdec.net>  Mon, 21 Feb 2022 22:36:00 +0000
+
+python3-aiostem (0.2.2) unstable; urgency=low
+
+  * Controller now accepts both synchronous and asynchronous event handlers
+
+ -- Romain Bezut <morian@xdec.net>  Sun, 20 Feb 2022 14:49:00 +0000
+
 python3-aiostem (0.2.1) unstable; urgency=low
 
-  * Fix packaging excluding the whole library.
+  * Fix packaging excluding the whole library
 
  -- Romain Bezut <morian@xdec.net>  Fri, 21 Jan 2022 17:55:00 +0000
 
