--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-aiostem (0.2.6) unstable; urgency=low
+
+  * Restore compatibility with python 3.7
+
+ -- Romain Bezut <morian@xdec.net>  Sun, 13 Apr 2022 19:45:00 +0000
+
 python3-aiostem (0.2.5) unstable; urgency=low
 
   * Add support for SETCONF command.
