--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+python3-aiostem (0.2.9) unstable; urgency=low
+
+  * Fix typing and linting issues
+  * Add support for Debian 12
+  * Add support for python 3.12
+
+ -- Romain Bezut <morian@xdec.net>  Sat,  7 Oct 2023 17:45:00 +0000
+
+python3-aiostem (0.2.8) unstable; urgency=low
+
+  * Fix some missing exports in StatusEvents
+
+ -- Romain Bezut <morian@xdec.net>  Sun, 20 Nov 2022 19:00:00 +0000
+
+python3-aiostem (0.2.7) unstable; urgency=low
+
+  * Add compatibility with python 3.11
+  * Add support for command 'DROPGUARDS'
+
+ -- Romain Bezut <morian@xdec.net>  Tue, 25 Oct 2022 15:47:00 +0000
+
 python3-aiostem (0.2.6) unstable; urgency=low
 
   * Restore compatibility with python 3.7
@@ -6,7 +27,7 @@ python3-aiostem (0.2.6) unstable; urgency=low
 
 python3-aiostem (0.2.5) unstable; urgency=low
 
-  * Add support for SETCONF command.
+  * Add support for SETCONF command
 
  -- Romain Bezut <morian@xdec.net>  Wed, 13 Mar 2022 20:25:10 +0000
 
