monitor: add Monitor and ControllerStatus classes (from onionfarm.scanner).
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 python3-aiostem (0.3.0) unstable; urgency=low
 
+  * Add a Monitor helper class to check Tor status
   * Improve code coverage
   * Drop support for Debian 11
   * Drop support for python 3.9
